--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@
   		color:white;
   		transition: 0.6s ease;
   	}
+	.v-top{
+		font-size:16px;
+		padding-bottom:5px;
+	}
   	.hide{
   		display:none;
   	}
